[Feat/#87] 경매 서비스 클래스에 redis 캐싱 로직 추가